# Onekey

./: .gitignore  LICENSE  LICENSE.md  README.md  api.go  app.go  go.mod  go.sum  main.go  main.py  package.json  pyproject.toml  requirements.txt  setup.py  wails.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug反馈.md
.github/workflows/: build.yml  ci.yml  dev.yml  pylint.yml  python-publish.yml  release.yml  sync.yml
common/: check.py  checkcn.py  config.py  dkey_merge.py  dl.py  get_manifest_info.py  get_steam_path.py  getsteampath.py  gl_unlock.py  glunlock.py  init_text.py  log.py  main_func.py  manifest_down.py  manifestdown.py  migration.py  st_unlock.py  stack_error.py  stunlock.py  unlock.py  variable.py
frontend/: index.html  package-lock.json  package.json  package.json.md5  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/i18n/: en.ts  index.ts  zh.ts
internal/config/: config.go  registry_other.go  registry_windows.go
internal/constants/: constants.go
internal/httpclient/: client.go  doh.go  publicip.go
internal/i18n/: i18n.go
internal/kernel/: client.go
internal/manifest/: handler.go
internal/models/: models.go
internal/patcher/: patcher.go
internal/steamtools/: steamtools.go
src/: __init__.py  config.py  constants.py  logger.py  main.py  manifest_handler.py  models.py
src/network/: client.py  github.py
src/tools/: base.py  greenluma.py  steamtools.py
src/utils/: i18n.py  region.py  steam.py
web/: app.py
web/templates/: about.html  index.html  oobe.html  settings.html
(+40 files in other folders)
