[project]
name = "onekey"
version = "1.3.7"
description = "A Steam Depot Cache Downloader"
authors = [
    {name = "ikun0014",email = "ikun0014@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles (>=24.1.0,<25.0.0)",
    "logzero (>=1.7.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "rich (>=13.9.4,<14.0.0)",
    "ujson (>=5.10.0,<6.0.0)",
    "vdf (>=3.4,<4.0)"
]

[tool.poetry]
packages = [{include = "onekey", from = "."}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
